third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/float/trailing-us-exp-1.stderr
TOML parse error at line 1, column 23
  |
1 | trailing-us-exp-1 = 1_e2
  |                       ^
invalid integer
expected digit
